--- a/flash-card/flash-card-app/src/App.css
+++ b/flash-card/flash-card-app/src/App.css
@@ -3,3 +3,89 @@
   padding: 0;
   margin: 0;
 }
+
+.App{
+  width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+}
+
+.stepForm__main{
+  display: flex;
+  background-color: #efeded;
+  width: 400px;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 8px;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 175px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.stepForm__top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.stepForm__main__stepCount{
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.active {
+  background-color: blueviolet;
+}
+
+.complete {
+  background-color: rgb(0, 255, 0);
+}
+
+.notAttempted {
+  background-color: #d7d7d7;
+}
+
+.stepForm__main__stepCount > p{
+  color: white;
+}
+
+.stepForm__center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stepForm__center > p{
+  color: rgb(46, 46, 46);
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.stepForm__bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button{
+  height: 35px;
+  width: 100px;
+  border-radius: 999px;
+  border: none;
+  background-color: blueviolet;
+  cursor: pointer;
+  color: white;
+  
+}
+
+button:disabled,
+button[disabled]{
+  background-color: #d7d7d7;
+  color: #b1b1b1;
+}
