--- a/far-away-island/far-away-app/src/components/list/_list.css
+++ b/far-away-island/far-away-app/src/components/list/_list.css
@@ -45,6 +45,9 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .list__item{
