--- a/far-away-island/far-away-app/src/components/list/_list.css
+++ b/far-away-island/far-away-app/src/components/list/_list.css
@@ -9,6 +9,9 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.list__main{
     display: flex;
     flex-wrap: wrap;
 }
